--- a/Colosseum/style.css
+++ b/Colosseum/style.css
@@ -61,7 +61,7 @@ header h2{
     text-transform: uppercase;
 }
 
-header .nav{
+ header .nav{
     display: flex;
 }
 
@@ -77,7 +77,7 @@ header .nav li:last-child{
     margin-right: 0;
 }
 
-@media(max-width:1000px){
+ @media(max-width:1000px){
     header{
         padding: 20px 50px;
     }
@@ -93,7 +93,7 @@ header .nav li:last-child{
     header .nav li{
         margin: 0 7px;
     }
-}
+}  
 
 .box{
     position: relative;
@@ -120,10 +120,10 @@ header .nav li:last-child{
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-/* .box h3{
+.box h3{
     margin-bottom: 40px;
     font-size: 25px;
-} */
+}
 
 .box a .boxBtn{
     padding: 15px 35px;
@@ -157,4 +157,36 @@ header .nav li:last-child{
 
 .pirate-text {
   font-family: 'IM Fell English SC';
+}
+/* Timer */
+.countdown-container{
+	display:flex;
+  }
+  .big-text{
+	font-size:3rem;
+  }
+.countdown-container > div{
+	margin:0 1rem;
+	text-align: center;
+	border:1px solid #fff;
+	padding:0px 20px;
+	border-radius: 7px;
+	box-shadow: 0px 2px 10px rgba(0,0,0,0.5);
+	box-sizing: border-box;
+	color:#fff;
+	min-width:150px;
+  }
+  @media (max-width:992px){
+	.countdown-container > div{
+	  margin:0 1rem;
+	}
+  }
+  @media (max-width:767px){
+	.countdown-container{
+	  flex-wrap: wrap;
+	}
+	.countdown-container > div{
+	  margin:1rem auto;
+	  max-width:150px;
+	}
 }
