--- a/src/Pages/homepage/Homepage.css
+++ b/src/Pages/homepage/Homepage.css
@@ -1,7 +1,7 @@
 .homepage-container {
     position: relative;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
   }
   
   .homepage-container video {
@@ -11,7 +11,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1;
+    z-index: 0;
   }
   
   .homepage-heading {
@@ -19,10 +19,11 @@
     color:cornsilk;
     text-transform: uppercase;
     text-shadow: 3px 4px 3px rgb(5 0 0 / 50%);
+    position: relative;
   }
 
   .box {
-    top: 0;
+    top: 40vh;
     left: 0;
     right: 0;
     bottom: 0;
@@ -34,19 +35,23 @@
   }
   
 
-h1{
+.homepage-heading{
     font-family: 'IM Fell English SC';
     margin: 0;
     position:relative;
-    top: 35vh;
+    top: 0vh;
 }
 
 @media (max-width: 450px) {
-  h1 {
-    top: 35vh;
-  }
   .homepage-heading{
+    top:0vh;
     font-size: 11vw
+  }
+  .box{
+    top:45vh;
+  }
+  .countdown-container{
+    top:50vh;
   }
 
 }
@@ -55,7 +60,7 @@ h1{
 	display:flex;
   justify-content: center;
   position: relative;
-  top: 40vh;
+  top: 45vh;
   }
   .big-text{
 	font-size:3rem;
