--- a/src/Components/event_page.scss
+++ b/src/Components/event_page.scss
@@ -41,6 +41,10 @@ p{
   }
  }
 }
+
+.event_info_main{
+  overflow: hidden;
+}
 //--------------------------
 //  bg-overlay()
 //  @description:pseduo overlay element  
@@ -102,6 +106,7 @@ body {
   width: 100%;
   height: 100vh;
   color: #fff;
+  
   // background-color: #111;
   @include bg-overlay(rgb(17 17 17 / 90%), 0.9);  
   
@@ -164,6 +169,7 @@ body {
     height: 35vh;
     overflow-x: auto;
     overflow-y: scroll;
+    display: block;
   }
 }
 div.textbox::-webkit-scrollbar {
