--- a/src/Sections/event_page/event_page.scss
+++ b/src/Sections/event_page/event_page.scss
@@ -207,7 +207,7 @@ div.textbox::-webkit-scrollbar-thumb:hover {
   0%   { opacity: 0; text-shadow: 0px 0px 1px rgba(255,255,255,0.1)}
   66%  { opacity: 1; text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.443) }
   77%   { opacity: 1;  }
-  100% { opacity:0.7; text-shadow: 0px 0px 20px rgba(255,255,255,0.0)}
+  100% { opacity:0.8; text-shadow: 0px 0px 20px rgba(255, 255, 255, 0)}
 }
 
 /*   
