--- a/src/Sections/Navbar/Navbar.css
+++ b/src/Sections/Navbar/Navbar.css
@@ -12,7 +12,7 @@
 	align-items: center;
 	justify-content: space-between;
 	height: 10vh;
-	padding: 0 2rem;
+	padding: 0 1rem;
 	background-color: rgba(0, 0, 0, 0.349);
 	color: var(--textColor);
 	
@@ -31,6 +31,15 @@
 	color: var(--textColor);
 	text-decoration: none;
 	cursor: url(./cursor2.png), pointer;
+}
+
+.image{
+	height: 8vh;
+	width: 8vh;
+	background: transparent;
+	cursor: url(./cursor2.png), pointer;
+	position: relative;
+	top: 0.6vh
 }
 
 .Links:hover {
@@ -52,7 +61,7 @@ header .nav-btn {
 	font-size: 1.8rem;
   text-align: center;
   position: relative;
-  right: -35px;
+  right: -13px;
   top: 4px
 }
 
