Minor changes and configured for custom domain

--- a/src/Sections/EventCards/EventCards.scss
+++ b/src/Sections/EventCards/EventCards.scss
@@ -10,13 +10,13 @@
   --color2: rgb(255, 0, 231);
   --firstevent1: #fac;
   --firstevent2: #ddccaa;
-  --firsteventfront: url(https://i.ibb.co/VNsP2kD/Whats-App-Image-2023-03-28-at-11-21-58.jpg);
+  --firsteventfront: url(https://i.ibb.co/VvtMSbP/Youth-parliament.jpg);
   --secondevent1: #54a29e;
   --secondevent2: #a79d66;
-  --secondeventfront: url(https://i.ibb.co/BKL2ySQ/valorant.jpg);
+  --secondeventfront: url(https://i.ibb.co/C5TsqCZ/Whats-App-Image-2023-03-28-at-21-55-13.jpg);
   --thirdevent1: #efb2fb;
   --thirdevent2: #acc6f8;
-  --thirdeventfront: url(https://i.ibb.co/VvtMSbP/Youth-parliament.jpg);
+  --thirdeventfront: url(https://i.ibb.co/VNsP2kD/Whats-App-Image-2023-03-28-at-11-21-58.jpg);
   --firstbuffer1: #efb2fb;
   --firstbuffer2: #acc6f8;
   --firstbufferfront: url(https://i.ibb.co/1YNVLTm/Innovation-Island.jpg);
@@ -31,12 +31,12 @@
   --sixtheventfront: url(https://i.ibb.co/sJQ2Mhz/Recrewtment.jpg);
   --secondbuffer1: #efb2fb;
   --secondbuffer2: #acc6f8;
-  --secondbufferfront: url(https://i.ibb.co/80bQCFw/Aws-workshop.jpg);
+  --secondbufferfront: url(https://i.ibb.co/hCF8WPY/Whats-App-Image-2023-03-28-at-22-13-34.jpg);
 }
 
 .card {
-  width: 71.5vw;
-  height: 100vw;
+  width: 55vw;
+  height: 76.91vw;
   // width: clamp(200px, 61vh, 18vw);
   // height: clamp(280px, 85vh, 25.2vw);
   @media screen and (min-width: 600px) {
