--- a/src/Pages/homepage/Homepage.css
+++ b/src/Pages/homepage/Homepage.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
   }
   
   .homepage-container video {
@@ -15,7 +16,7 @@
   }
   
   .homepage-heading {
-    font-size: 9vw;
+    font-size: 6.5vw;
     color:cornsilk;
     text-transform: uppercase;
     text-shadow: 3px 4px 3px rgb(5 0 0 / 50%);
@@ -36,7 +37,7 @@
   
 
 .homepage-heading{
-    font-family: 'IM Fell English SC';
+    /* font-family: 'IM Fell English SC'; */
     margin: 0;
     position:relative;
     top: 0vh;
@@ -45,7 +46,7 @@
 @media (max-width: 450px) {
   .homepage-heading{
     top:0vh;
-    font-size: 11vw
+    font-size: 10vw
   }
   .box{
     top:45vh;
@@ -60,10 +61,10 @@
 	display:flex;
   justify-content: center;
   position: relative;
-  top: 45vh;
+  top: 50vh;
   }
   .big-text{
-	font-size:3rem;
+	font-size:2rem;
   }
 .countdown-container > div{
 	margin:0 1rem;
@@ -74,7 +75,7 @@
 	box-shadow: 10px 12px 10px rgba(0, 0, 0, 0.623);
 	box-sizing: border-box;
 	color:wheat;
-	min-width:150px;
+	min-width:140px;
   max-width: 175px;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
